--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   </head>
   <body>
   <h1>welcome to my website</h1>
+  <h2>added h2 tab LOCALLY</h2>
+  <h3>added h3 tag on report repo</h3>
 </body>
 </html>
